
Lullaby 1.1
- ping server every 5 minutes
- add notification
- can't seek in none preload zone