@@ -36,4 +36,7 @@
 
 <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 <uses-sdk android:targetSdkVersion="7" android:minSdkVersion="4"></uses-sdk>
+
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+
 </manifest> 
