@@ -3,3 +3,5 @@ Lullaby 1.1
 - ping server every 5 minutes
 - add notification
 - can't seek in none preload zone
+- add TextFilter to song view
+- cache metadata
